[package]
name = "cuda-gl-interop"
description = "Crate for copying memory between CUDA buffers and OpenGL textures."
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>", "Matěj Laitl <matej@laitl.cz>", "Marek Bernat <marek.bernat@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/tonarino/cuda-gl-interop"
homepage = "https://github.com/tonarino/cuda-gl-interop"
readme = "README.md"
keywords = ["cuda", "opengl"]

[dependencies]
anyhow = "1"
cuda-sys = "0.2"
gl = "0.14"

[dev-dependencies]
glium = "0.36"
glutin = "0.32.2"
winit = "0.30"

[[test]]
name = "transfer-test"
path = "tests/transfer_test.rs"
harness = false
